[package]
name = "findip"
version = "0.1.0"
authors = ["Yash Kulshrestha <yash.kulshrestha@gmail.com>"]
edition = "2018"

[lib]
name = "findiplib"
path = "src/lib.rs"


[[bin]]
name = "findipbin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.3"
