[package]
name = "findip"
version = "0.1.0"
authors = ["Yash Kulshrestha <yash.kulshrestha@gmail.com>"]
edition = "2018"

[lib]
name = "findip_lib"
path = "src/lib.rs"


[[bin]]
name = "findip"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.3"
cron-parser = "0.7.9"
tokio = { version = "1.5.0", features = ["full"] }
s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.7-alpha", package = "aws-sdk-s3" }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = { version = "2", features = ["serde"] }
